# fastapi-jwt-auth

./: .env.example  .gitignore  .pypirc  .travis.yml  404.html  CHANGELOG.md  LICENSE  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: build-docs.yml  ci.yml  release.yml  tests.yml
advanced-usage/additional-claims/: index.html
advanced-usage/asymmetric/: index.html
advanced-usage/bigger-app/: index.html
advanced-usage/dynamic-algorithm/: index.html
advanced-usage/dynamic-expires/: index.html
advanced-usage/generate-docs/: index.html
advanced-usage/websocket/: index.html
api-doc/: index.html
async_fastapi_jwt_auth/: __init__.py  auth_config.py  auth_jwt.py  config.py  exceptions.py
configuration/cookies/: index.html
configuration/csrf/: index.html
configuration/denylist/: index.html
configuration/general/: index.html
configuration/headers/: index.html
contributing/: index.html
docs/: api-doc.md  contributing.md  index.md  installation.md
docs/advanced-usage/: additional-claims.md  asymmetric.md  bigger-app.md  dynamic-algorithm.md  dynamic-expires.md  generate-docs.md  websocket.md
docs/configuration/: cookies.md  csrf.md  denylist.md  general.md  headers.md
docs/usage/: basic.md  freshness.md  jwt-in-cookies.md  jwt_in_cookies.md  optional.md  refresh.md  revoking.md
examples/: additional_claims.py  asymmetric.py  basic.py  blacklist.py  blacklist_redis.py  csrf_protection_cookies.py  denylist.py  denylist_redis.py  dynamic_algorithm.py  freshness.py  generate_doc.py  jwt_in_cookies.py  optional.py  optional_protected_endpoints.py  refresh.py  refresh_tokens.py  token_freshness.py  websocket.py  websocket_cookie.py  without_dependency.py
examples/multiple_files/: app.py  requirements.txt
examples/multiple_files/routers/: items.py  users.py
examples/multiple_files/services/: .env.example  alembic.ini  app.py  config.py  database.py  sql.db
examples/multiple_files/services/alembic/: env.py
examples/multiple_files/services/alembic/versions/: 4e36b7b730e5_init_db.py
examples/multiple_files/services/controller/: UserController.py
examples/multiple_files/services/models/: UserModel.py
examples/multiple_files/services/routers/: Users.py
examples/multiple_files/services/schemas/users/: RegisterSchema.py  UserSchema.py
fastapi-jwt-auth/: auth_config.py  auth_jwt.py
fastapi_jwt_auth/: JWTAuthorization.py  __init__.py  auth_config.py  auth_jwt.py  auth_property.py  config.py  exceptions.py  jwt_auth.py
release-notes/: index.html
scripts/: docs-live.sh  tests.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api-doc/: index.html
site/configuration/cookies/: index.html
site/configuration/csrf/: index.html
site/configuration/denylist/: index.html
site/configuration/general/: index.html
site/configuration/headers/: index.html
site/contributing/: index.html
site/release-notes/: index.html
site/search/: search_index.json
site/usage/basic/: index.html
site/usage/freshness/: index.html
site/usage/jwt-in-cookies/: index.html
site/usage/optional/: index.html
site/usage/refresh/: index.html
site/usage/revoking/: index.html
tests/: conftest.py  private_key.txt  public_key.txt  test_blacklist.py  test_config.py  test_cookies.py  test_create_token.py  test_decode_token.py  test_denylist.py  test_header.py  test_headers.py  test_token_multiple_locations.py  test_token_types.py  test_url_protected.py  test_websocket.py  utils.py
usage/basic/: index.html
usage/freshness/: index.html
usage/jwt-in-cookies/: index.html
usage/optional/: index.html
usage/refresh/: index.html
usage/revoking/: index.html
