[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "async_fastapi_jwt_auth"
authors = [
    {name = "Yan Khachko & Nyoman Pradipta Dewantara", email = "a@slnk.icu"},
]
readme = "README.md"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dynamic = ["version", "description"]

dependencies = [
  "fastapi>=0.73.0",
  "PyJWT>=2.3.0"
]


[project.urls]
Documentation = "https://sijokun.github.io/async-fastapi-jwt-auth"
Source = "https://github.com/sijokun/async-fastapi-jwt-auth"


[project.optional-dependencies]
test = [
  "pytest>=6.2.5",
  "pytest-cov>=3.0.0",
  "coveralls==3.3.1",
  "pytest-asyncio>=0.17.2"
]

doc = [
  "mkdocs>=1.1.2,<2.0.0",
  "mkdocs-material>=5.5.0,<6.0.0",
  "markdown-include>=0.5.1,<0.6.0"
]

dev = [
  "cryptography>=2.6,<4.0.0",
  "uvicorn>=0.17.3"
]

asymmetric = ["cryptography>=2.6,<4.0.0"]
